--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,16 @@
     color: #474747;
     font-size: 20px;
 }
+.section-title{
+    font-weight: bold;
+    font-size: 35px;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    margin: 30px 0px;
+
+}
 
 .primary-btn{
     width: 150;
@@ -71,7 +81,7 @@ nav h1{
 .nav-container{
     display: flex;
     justify-content: space-between;
-    margin: 0px 230px;
+    margin: 51px 230px;
 }
 nav li{
     list-style: none;
@@ -124,4 +134,33 @@ nav ul{
 .banner-btn{
     display: flex;
     gap: 30px;
+}
+
+/* main style */
+/* about me start */
+
+.about-me{
+    text-align: center;
+    background-color: #FFF8F3;
+    margin: 130px;
+    border-radius: 10px;
+    padding: 131px 156px;
+}
+.about-me-content{
+    background-color: white;
+    border: 1px solid #474747;
+    padding: 10px;
+    border-radius: 5px;
+}
+.about-me-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item{
+    font-size: 20px;
+    color: #757575;
+}
+.item-value{
+    font-size: 20px;
+    font-weight: bold;
 }
