--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,10 @@
     color: #474747;
     font-size: 20px;
 }
+.dark3{
+    color: #757575;
+    font-size: 16px;
+}
 .section-title{
     font-weight: bold;
     font-size: 35px;
@@ -163,4 +167,30 @@ nav ul{
 .item-value{
     font-size: 20px;
     font-weight: bold;
+}
+
+
+
+/* skills section */
+.skills-container{
+    margin-bottom: 130px;
+}
+.skills-description{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.skill-card{
+    padding: 30px;
+    box-shadow: 0px 6px 50px #000000;
+    max-width: 257px;
+    border-radius: 5px;
+}
+.skill-title{
+    margin:30px 0px 20px 0px;
+}
+
+.skill-catagory{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
 }
